--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "braces": "2.3.2",
-    "react": "16.8.3",
-    "react-dom": "16.8.3",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "^2.1.8"
+    "react": "16.8.6",
+    "react-dom": "16.8.6",
+    "react-router-dom": "5.0.0",
+    "react-scripts": "3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
